force-app/main/default/objects/MeetupRegistration__c/MeetupRegistration__c.object-meta.xml
<CustomObject>
    <description>Individual user registration for a meetup.</description>
    <label>Meetup Registration</label>
    <nameField>
        <displayFormat>MR-{0}</displayFormat>
        <label>Meetup Registration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetup Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>