force-app/main/default/objects/MeetupRegistration__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>Registrant First Name.</description>
    <inlineHelpText>Registrant First Name.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>