force-app/main/default/objects/MeetupRegistration__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>Registrant Last Name.</description>
    <inlineHelpText>Registrant Last Name.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>